# Learning-openGL

./: .gitignore  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: Engine.h
Engine/include/core/: Constants.h  Input.h  Window.h
Engine/include/renderer/: Shader.h
Engine/include/util/: FileOperations.h
Engine/src/core/: Input.cpp  Window.cpp
Engine/src/renderer/: Shader.cpp
Engine/src/util/: FileOperations.cpp
src/: CMakeLists.txt  Main.cpp
